assets/css/style.css
body {
  background-color: #fffdd0;
}
#highscores{
  border-radius: 10px;
}

#wrapper {
  position: absolute;
  display: block;
  top: 20%;
  width: auto;
  height: auto;
  border: 1px solid black;
  right: 20%;
  left: 20%;
}
a {
  float: left;
  text-decoration: none;
  color: white;
  background-color: gray;
  padding: 10px;
  position: absolute;
}
#startTime {
  background-color: gray;
  margin-left: 33%;
  padding: 15px 30px;
  font-size: 20px;
  color: white;
}
#quizQuestions {
  margin: 20px;
}

#currentTime {
  float: right;
}

#goBack {
  background-color: gray;
  position: relative;
  padding: 10px;
  font-size: 20px;
  color: white;
  top: 30%;
  left: 55%;
  width: auto;
  text-align: center;
  text-decoration: none;
}

#clear {
  background-color: gray;
  position: relative;
  padding: 10px;
  font-size: 20px;
  color: white;
  top: 30%;
  right: 5%;
  text-align: center;
}

button {
  border-radius: 10px;
}

textarea {
  width: 90%;
  margin: 20px;
}

#Submit {
  background-color: gray;
  margin-left: 33%;
  padding: 15px 32px;
  font-size: 20px;
  color: white;
}

label {
  margin-right: 10px;
}
input {
  margin-bottom: 20px;
  width: 50%;
  border: 1px solid black;
}

h1 {
  text-align: center;
}

li {
  background-color: gray;
  margin-top: 10px;
  padding: 5px 15px;
  width: 80%;
  font-size: 18px;
  color: white;
  border: 1px solid black;
  border-radius: 10px;
  width: fit-content;
  cursor: pointer; 
}

#createDiv {
  margin-top: 20px;
  border-top: 1px solid black;
}

